# api/models/url.go
@@ -7,7 +7,7 @@ type Url struct {
 	UserId      int64      `json:"user_id"`
 	OriginalUrl string     `json:"original_url"`
 	HashedUrl   string     `json:"hashed_url"`
-	MaxClicks   *int64      `json:"max_clicks"`
+	MaxClicks   *int64     `json:"max_clicks"`
 	ExpiresAt   *time.Time `json:"expires_at"`
 	CreatedAt   string     `json:"created_at"`
 }
@@ -15,4 +15,5 @@ type CreateShortUrlRequest struct {
 	OriginalUrl string `json:"original_url" binding:"required"`
 	MaxClicks   int64  `json:"max_clicks"`
 	Duration    string `json:"duration"`
+	CustomUrl   string `json:"custom_url"`
 }
